# Gemma4-Visual-Agent

./: .gitignore  ARCHITECTURE.md  README.md  VIDEO_PLAN.md  agent.py  agent_studio.py  app.py  demo.py  main.py  pyproject.toml  video_tracker.py  vision_studio.py
dgx_spark_gb10/: README.md  agent.py  agent_studio.py  app.py  demo.py  main.py  requirements.txt  video_tracker.py  vision_studio.py
