[project]
name = "gemma4-visual-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "falcon-perception>=1.0.0",
    "fastapi[standard]>=0.135.3",
    "gradio>=6.12.0",
    "mlx-vlm>=0.4.4",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pycocotools>=2.0.11",
]
